--- a/releases.yaml
+++ b/releases.yaml
@@ -66,7 +66,6 @@ releases:
             python3-aioblescan: 0.2.14
             python3-intelhex: 2.3.0-1
             python3-json-rpc: 1.9.2.wb1
-            python3-modbus-utils-rpc: 1.1.7
             python3-mosquitto: 1.3.4-2contactless1
             python3-mqttrpc: 1.2.2
             python3-paho-socket: 0.0.3-1
@@ -1300,6 +1299,7 @@ staging:
         - "python-mqttrpc"
         - "python-wb-common"
         - "python-wb-mcu-fw-updater"
+        - "python3-modbus-utils-rpc"
         - "wb-mqtt-spl-meter"
         - "wb-mqtt-timestamper"
         - "wb-homa-zway"
