Update WB-MR stable firmwares: wb-2401 curtains support

--- a/releases.yaml
+++ b/releases.yaml
@@ -129,7 +129,7 @@ releases:
             wb-mqtt-mhz19: '1.0'
             wb-mqtt-opcua: 1.1.2
             wb-mqtt-rfblinds: 1.0.2
-            wb-mqtt-serial: 2.108.9
+            wb-mqtt-serial: 2.109.1
             wb-mqtt-sht1x: '1.0'
             wb-mqtt-smartbus: '1.2'
             wb-mqtt-smartweb: 1.4.3
@@ -943,26 +943,25 @@ releases:
         firmwares:
             # WB-MR
             mr2m: 1.15.2        # на данном таргете на версиях старше 1.15.2 прошивка перестала помещаться в 12K (16K FLASH - 4K bootloader)
-            mr2m_k6: 1.20.4
-            mr2mG: 1.20.4
-            mr3: 1.20.4
-            mr3G: 1.20.4
-            mr6: 1.20.4
-            mr6_042: 1.20.4
-            mr6G: 1.20.4
-            mr6c: 1.20.4
-            mr6cG: 1.20.4
-            mr6c_042: 1.20.4
-            mr6cu: 1.20.4
-            mr6cu_042: 1.20.4
-            mr6cuG: 1.20.4
-            mr6cpG: 1.20.4
-            mrps6: 1.20.4
-            mrps6G: 1.20.4
-            mrwl3: 1.20.4
-            mrwl3G: 1.20.4
-            mrwl3_042: 1.20.4
-            mrwm2G: 1.20.4
+            mr2m_k6: 1.20.4     # на данном таргете на версиях старше 1.20.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
+            mr2mG: 1.21.1
+            mr3: 1.20.4         # на данном таргете на версиях старше 1.20.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
+            mr3G: 1.21.1
+            mr6: 1.20.4         # на данном таргете на версиях старше 1.20.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
+            mr6_042: 1.20.4     # на данном таргете на версиях старше 1.20.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
+            mr6G: 1.21.1
+            mr6c: 1.20.4        # на данном таргете на версиях старше 1.20.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
+            mr6cG: 1.21.1
+            mr6c_042: 1.20.4    # на данном таргете на версиях старше 1.20.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
+            mr6cu: 1.21.1
+            mr6cu_042: 1.21.1
+            mr6cuG: 1.21.1
+            mr6cpG: 1.21.1
+            mrps6: 1.20.4       # на данном таргете на версиях старше 1.20.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
+            mrps6G: 1.21.1
+            mrwl3: 1.20.4       # на данном таргете на версиях старше 1.20.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
+            mrwl3G: 1.21.1
+            mrwl3_042: 1.20.4   # на данном таргете на версиях старше 1.20.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             # WB-MWAC
             wbmwac: 1.19.2      # на данном таргете на версиях старше 1.19.2 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             wbmwac_042: 1.19.2  # на данном таргете на версиях старше 1.19.2 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
@@ -1045,23 +1044,23 @@ releases:
             # WB-MR
             mr2m: 1.15.2        # на данном таргете на версиях старше 1.15.2 прошивка перестала помещаться в 12K (16K FLASH - 4K bootloader)
             mr2m_k6: 1.20.4     # на данном таргете на версиях старше 1.20.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
-            mr2mG: 1.21.0
+            mr2mG: 1.21.1
             mr3: 1.20.4         # на данном таргете на версиях старше 1.20.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
-            mr3G: 1.21.0
+            mr3G: 1.21.1
             mr6: 1.20.4         # на данном таргете на версиях старше 1.20.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mr6_042: 1.20.4     # на данном таргете на версиях старше 1.20.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
-            mr6G: 1.21.0
+            mr6G: 1.21.1
             mr6c: 1.20.4        # на данном таргете на версиях старше 1.20.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
-            mr6cG: 1.21.0
+            mr6cG: 1.21.1
             mr6c_042: 1.20.4    # на данном таргете на версиях старше 1.20.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
-            mr6cu: 1.21.0
-            mr6cu_042: 1.21.0
-            mr6cuG: 1.21.0
-            mr6cpG: 1.21.0
+            mr6cu: 1.21.1
+            mr6cu_042: 1.21.1
+            mr6cuG: 1.21.1
+            mr6cpG: 1.21.1
             mrps6: 1.20.4       # на данном таргете на версиях старше 1.20.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
-            mrps6G: 1.21.0
+            mrps6G: 1.21.1
             mrwl3: 1.20.4       # на данном таргете на версиях старше 1.20.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
-            mrwl3G: 1.21.0
+            mrwl3G: 1.21.1
             mrwl3_042: 1.20.4   # на данном таргете на версиях старше 1.20.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             # WB-MRWM2
             mrwm2G: 1.20.4
