--- a/releases.yaml
+++ b/releases.yaml
@@ -962,6 +962,8 @@ releases:
             mrwl3: 1.20.4       # на данном таргете на версиях старше 1.20.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mrwl3G: 1.21.1
             mrwl3_042: 1.20.4   # на данном таргете на версиях старше 1.20.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
+            # WB-MRWM2
+            mrwm2G: 1.20.4
             # WB-MWAC
             wbmwac: 1.19.2      # на данном таргете на версиях старше 1.19.2 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             wbmwac_042: 1.19.2  # на данном таргете на версиях старше 1.19.2 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
