staging: add arm-trusted-firmware package

--- a/releases.yaml
+++ b/releases.yaml
@@ -1224,6 +1224,7 @@ staging:
         - "logsave"
         - "ss-dev"
 
+        - "arm-trusted-firmware"
         - "atecc-util"
         - "ca-certificates-contactless"
         - "cmux"
