--- a/releases.yaml
+++ b/releases.yaml
@@ -146,7 +146,7 @@ releases:
             wb-test-suite-dummy: 1.18.3
             wb-update-manager: 1.3.2
             wb-update-notifier: 0.1.0
-            wb-utils: 4.20.2
+            wb-utils: 4.20.2-wb100
             wb-zigbee2mqtt: 1.3.4
             webif: '1.5'
             z-way-server: 4.1.1-lws16
