--- a/releases.yaml
+++ b/releases.yaml
@@ -43,7 +43,7 @@ releases:
             libwbmqtt1-4: 4.3.6
             libwbmqtt1-4-dev: 4.3.6
             libwbmqtt1-4-test-utils: 4.3.6
-            linux-libc-dev: 5.10.35-wb159
+            linux-libc-dev: 5.10.35-wb159+wb1
             logsave: 1.46.2-2+wb1
             mmc-utils: 0+git20180327.b4fe0c8c-1+wb1
             mobile-broadband-provider-info: 20230416-1
@@ -158,16 +158,16 @@ releases:
         wb6/bullseye:
             <<: *packages-wb-2401
 
-            linux-headers-wb6: 5.10.35-wb159
-            linux-image-wb6: 5.10.35-wb159
+            linux-headers-wb6: 5.10.35-wb159+wb1
+            linux-image-wb6: 5.10.35-wb159+wb1
             u-boot-wb6: 2:2021.10+wb1.7.1
             wb-bootlet-wb6x: 5.10.35-wb159-fs1.2.2-deb11-202311241137
 
         wb7/bullseye: &packages-wb-2401-wb7-bullseye
             <<: *packages-wb-2401
             
-            linux-headers-wb7: 5.10.35-wb159
-            linux-image-wb7: 5.10.35-wb159
+            linux-headers-wb7: 5.10.35-wb159+wb1
+            linux-image-wb7: 5.10.35-wb159+wb1
             u-boot-wb7: 2:2021.10+wb1.7.1
             wb-bootlet-wb7x: 5.10.35-wb159-fs1.2.2-deb11-202311241137
             mplc4-wirenboard7: 1.3.3.15223
