--- a/releases.yaml
+++ b/releases.yaml
@@ -1133,8 +1133,8 @@ releases:
             mcm8: 1.6.4
             mcm8G: 1.6.4
             # WB-MAO
-            mao4: 2.4.4
-            mao4G: 2.4.4
+            mao4: 2.4.4         # на данном таргете на версиях старше 2.4.4 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
+            mao4G: 2.5.0
             # WB-MAI
             wb-mai-v10: 1.3.1
             wb-mai6: 2.0.8
