--- a/releases.yaml
+++ b/releases.yaml
@@ -1,4 +1,175 @@
 releases:
+
+    wb-2404:
+        packages-common: &packages-wb-2404
+            atecc-util: 0.4.11
+            ca-certificates-contactless: '0.1'
+            cmux: '1.2'
+            comerr-dev: 2.1-1.46.2-2+wb1
+            contactless-keyring: '0.1'
+            e2fsck-static: 1.46.2-2+wb1
+            e2fsprogs: 1.46.2-2+wb1
+            e2fsprogs-l10n: 1.46.2-2+wb1
+            emmcparm: 5.0.1
+            firmware-realtek: 20170823-1~bpo9+1
+            flash-simcom-a76xx: 1.1.1
+            frpc: 0.52.3
+            frps: 0.52.3
+            fuse2fs: 1.46.2-2+wb1
+            gir1.2-modemmanager-1.0: 1.20.0-1~bpo11+1-wb108
+            gir1.2-nm-1.0: 1.42.4-1~bpo11+1-wb102
+            hubpower: '1.0'
+            intrahouse: 5.15.29
+            intrascada: 5.15.29
+            knxd: 0.14.51-1
+            knxd-dev: 0.14.51-1
+            knxd-examples: 0.11.15-1-wb1
+            knxd-tools: 0.14.51-1
+            libateccssl: '0.1'
+            libateccssl1.1: 0.2.5
+            libcom-err2: 1.46.2-2+wb1
+            libext2fs-dev: 1.46.2-2+wb1
+            libext2fs2: 1.46.2-2+wb1
+            libfdt1: 1.6.0-1
+            libmm-glib-dev: 1.20.0-1~bpo11+1-wb108
+            libmm-glib-doc: 1.20.0-1~bpo11+1-wb108
+            libmm-glib0: 1.20.0-1~bpo11+1-wb108
+            libmodbus-dev: 3.1.6-wb2
+            libmodbus5: 3.1.6-wb2
+            libnm-dev: 1.42.4-1~bpo11+1-wb102
+            libnm0: 1.42.4-1~bpo11+1-wb102
+            libsigrok4: 0.5.2-4
+            libsigrokdecode4: 0.5.3-4
+            libss2: 1.46.2-2+wb1
+            libwbmqtt1-4: 4.4.2
+            libwbmqtt1-4-dev: 4.4.2
+            libwbmqtt1-4-test-utils: 4.4.2
+            linux-libc-dev: 5.10.35-wb164
+            logsave: 1.46.2-2+wb1
+            mmc-utils: 0+git20180327.b4fe0c8c-1+wb1
+            mobile-broadband-provider-info: 20230416-1
+            modbus-utils: 1.2.10
+            modbus-utils-rpc: 1.2.2
+            modemmanager: 1.20.0-1~bpo11+1-wb108
+            modemmanager-dev: 1.20.0-1~bpo11+1-wb108
+            modemmanager-doc: 1.20.0-1~bpo11+1-wb108
+            mplc4-oni-plc-w: 1.3.3.15735
+            mqtt-tools: 1.4.4
+            network-manager: 1.42.4-1~bpo11+1-wb102
+            network-manager-config-connectivity-debian: 1.42.4-1~bpo11+1-wb102
+            network-manager-dev: 1.42.4-1~bpo11+1-wb102
+            nodejs: 16.18.1-deb-1nodesource1
+            python-gsmmodem-new: '1:0.11'
+            python-gspread: 1:0.4.1
+            python-mosquitto: 1.3.4-2contactless1
+            python-nrf24: 1.0+1
+            python-wb-io: 1.2.3
+            python3-aioblescan: 0.2.14
+            python3-intelhex: 2.3.0-1
+            python3-json-rpc: 1.9.2.wb1
+            python3-mosquitto: 1.3.4-2contactless1
+            python3-mqttrpc: 1.2.4
+            python3-paho-socket: 0.0.3-1
+            python3-umodbus: 1.0.4-1+wb1
+            python3-wb-common: 2.1.2
+            python3-wb-mcu-fw-updater: 1.10.11
+            python3-wb-mqtt-metrics: 0.3.3
+            python3-wb-nm-helper: 1.33.1
+            python3-wb-test-suite-deps: 1.18.4
+            python3-wb-update-manager: 1.3.2
+            python3-zpl: 0.1.10-wb101
+            rapidscada: 6.2.1-1
+            sensor-tools-scada-client: '1.1'
+            serial-tool: 1.2.0
+            sigrok-cli: 0.7.2-1
+            ss-dev: 2.0-1.46.2-2+wb1
+            tailscale: 1.62.1
+            task-wb-base-system: 1.18.4
+            task-wb-common-pkgs: 1.18.4
+            telegraf-wb-cloud-agent: 1.29.1
+            u-boot-tools-wb: 2:2021.10+wb1.7.1
+            wb-ble-tesliot: 1.1.1
+            wb-cc2652p-flasher: 1.0.0
+            wb-cloud-agent: 1.3.3
+            wb-configs: 3.22.1
+            wb-daemon-watchdogs: '1.1'
+            wb-demo-kit-configs: 1.7.0
+            wb-device-manager: 1.7.0
+            wb-diag-collect: 1.8.6
+            wb-dt-overlays: 1.6.1
+            wb-ec-firmware: 1.2.1
+            wb-essential: 1.18.4
+            wb-firmware-realtek: 1.0.3
+            wb-homa-adc: 2.6.5
+            wb-homa-gpio: 2.13.1
+            wb-homa-ism-radio: 1.17.3
+            wb-homa-rfsniffer: 1.0.9
+            wb-homa-w1: 2.2.10
+            wb-hwconf-manager: 1.58.8
+            wb-knxd-config: 1.1.2
+            wb-mb-explorer: 1.2.8
+            wb-mcu-fw-flasher: 1.3.2
+            wb-mcu-fw-updater: 1.10.11
+            wb-modbus-ext-scanner: 1.2.3
+            wb-mqtt-adc: 2.6.5
+            wb-mqtt-apcsnmp: '0.2'
+            wb-mqtt-bmp085: '1.2'
+            wb-mqtt-co2mon: 1.1.1
+            wb-mqtt-confed: 1.14.6
+            wb-mqtt-dac: 1.2.4
+            wb-mqtt-db: 2.8.13
+            wb-mqtt-db-cli: 1.4.5
+            wb-mqtt-gpio: 2.13.1
+            wb-mqtt-homeui: 2.82.1
+            wb-mqtt-iec104: 1.1.5
+            wb-mqtt-knx: 1.12.7
+            wb-mqtt-logs: 1.4.4
+            wb-mqtt-mbgate: 1.6.0
+            wb-mqtt-metrics: 0.3.3
+            wb-mqtt-opcua: 1.1.2
+            wb-mqtt-rfblinds: 1.0.2
+            wb-mqtt-serial: 2.116.1
+            wb-mqtt-smartbus: '1.2'
+            wb-mqtt-smartweb: 1.4.4
+            wb-mqtt-snmp: 1.2.7
+            wb-mqtt-urri: 1.2.1
+            wb-mqtt-w1: 2.2.10
+            wb-mqtt-zabbix: '0.2'
+            wb-nm-helper: 1.33.1
+            wb-rules: 2.20.1
+            wb-rules-system: 1.11.0
+            wb-suite: 1.18.4
+            wb-test-suite: '1.20'
+            wb-test-suite-deps: 1.12.0
+            wb-test-suite-dummy: 1.18.4
+            wb-update-manager: 1.3.2
+            wb-update-notifier: 0.1.0
+            wb-utils: 4.20.5
+            wb-zigbee2mqtt: 1.3.4
+            webif: '1.5'
+            z-way-server: 4.1.1-lws16
+            z-way4wb: '1.4'
+            zbw: '1.2'
+            zigbee2mqtt: 1.35.3-wb101
+            zigbee2mqtt-1.18.1: 1.18.1-wb102
+
+        wb6/bullseye:
+            <<: *packages-wb-2404
+
+            linux-headers-wb6: 5.10.35-wb164
+            linux-image-wb6: 5.10.35-wb164
+            u-boot-wb6: 2:2021.10+wb1.7.1
+            wb-bootlet-wb6x: 5.10.35-wb164-fs1.2.2-deb11-202311241137
+
+        wb7/bullseye:
+            <<: *packages-wb-2404
+
+            linux-headers-wb7: 5.10.35-wb164
+            linux-image-wb7: 5.10.35-wb164
+            u-boot-wb7: 2:2021.10+wb1.7.1
+            wb-bootlet-wb7x: 5.10.35-wb164-fs1.2.2-deb11-202311241137
+            mplc4-wirenboard7: 1.3.3.15223
+
     wb-2401:
         packages-common: &packages-wb-2401
             atecc-util: 0.4.11
@@ -1311,6 +1482,9 @@ staging:
         - "wb-mqtt-zway"
         - "wb-mqtt-lirc"
         - "wb-homa-ninja-bridge"
+        - "wb-mqtt-sht1x"
+        - "wb-mqtt-mhz19"
+        - "python3-wb-diag-collect"
         - package: "*wb-update-manager"
           version: "*-upgrade*"
         - package: wb-mqtt-homeui
