--- a/git-sources.yaml
+++ b/git-sources.yaml
@@ -12,21 +12,32 @@ by-package:
     e2fsprogs: null  # FIXME
     flash-simcom-a76xx: "https://github.com/wirenboard/flash-simcom-a76xx"
     fuse2fs: null  # FIXME
+    gir1.2-modemmanager-1.0: "https://github.com/wirenboard/modemmanager"
+    gir1.2-nm-1.0: "https://github.com/wirenboard/network-manager"
     hubpower: "https://github.com/wirenboard/hubpower"
+    knxd-dev: "https://github.com/wirenboard/knxd"
+    knxd-examples: "https://github.com/wirenboard/knxd"
+    knxd-tools: "https://github.com/wirenboard/knxd"
+    knxd: "https://github.com/wirenboard/knxd"
     libateccssl1.1: "https://github.com/wirenboard/cryptoauth-openssl-engine"
     libcomerr2: null  # FIXME
+    libmm-glib-dev: "https://github.com/wirenboard/modemmanager"
+    libmm-glib-doc: "https://github.com/wirenboard/modemmanager"
+    libmm-glib0: "https://github.com/wirenboard/modemmanager"
     libmodbus-dev: "https://github.com/wirenboard/libmodbus"
     libmodbus5: "https://github.com/wirenboard/libmodbus"
     libmosquitto-dev: "https://github.com/wirenboard/contrib"
     libmosquitto1: "https://github.com/wirenboard/contrib"
     libmosquittopp-dev: "https://github.com/wirenboard/contrib"
     libmosquittopp1: "https://github.com/wirenboard/contrib"
+    libnm-dev: "https://github.com/wirenboard/network-manager"
+    libnm0: "https://github.com/wirenboard/network-manager"
     libss2: null  # FIXME
     libwbmqtt-dev: "http://github.com/wirenboard/libwbmqtt"
     libwbmqtt0: "https://github.com/wirenboard/libwbmqtt0"
-    libwbmqtt1-dev: "https://github.com/wirenboard/libwbmqtt1"
-    libwbmqtt1-test-utils: "https://github.com/wirenboard/libwbmqtt1"
-    libwbmqtt1: "https://github.com/wirenboard/libwbmqtt1"
+    libwbmqtt1-4-dev: "https://github.com/wirenboard/libwbmqtt1"
+    libwbmqtt1-4-test-utils: "https://github.com/wirenboard/libwbmqtt1"
+    libwbmqtt1-4: "https://github.com/wirenboard/libwbmqtt1"
     libwbmqtt: "https://github.com/wirenboard/libwbmqtt0"
     linux-firmware-image-4.1.15-imxv5-x0.1: "http://github.com/wirenboard/linux"
     linux-firmware-image-4.1.15-wb2: "http://github.com/wirenboard/linux"
@@ -36,10 +47,13 @@ by-package:
     linux-headers-wb2: "https://github.com/wirenboard/linux"
     linux-headers-wb6: "https://github.com/wirenboard/linux"
     linux-headers-wb7: "https://github.com/wirenboard/linux"
+    linux-headers-wb8: "https://github.com/wirenboard/linux"
     linux-image-4.9.22-wb2: "https://github.com/wirenboard/linux"
     linux-image-wb2: "https://github.com/wirenboard/linux"
     linux-image-wb6: "https://github.com/wirenboard/linux"
     linux-image-wb7: "https://github.com/wirenboard/linux"
+    linux-image-wb8: "https://github.com/wirenboard/linux"
+    linux-libc-dev: "https://github.com/wirenboard/linux"
     mmc-utils: null  # FIXME
     modbus-utils-rpc: "https://github.com/wirenboard/modbus-utils-rpc"
     modbus-utils: "https://github.com/wirenboard/modbus-utils"
@@ -69,6 +83,7 @@ by-package:
     python-wb-common: "https://github.com/wirenboard/wb-common"
     python-wb-io: "https://github.com/wirenboard/wb-io-python"
     python-wb-mcu-fw-updater: "https://github.com/wirenboard/wb-mcu-fw-updater"
+    python3-aioblescan: "https://github.com/wirenboard/aioblescan"
     python3-json-rpc: "https://github.com/wirenboard/json-rpc"
     python3-modbus-utils-rpc: "https://github.com/wirenboard/modbus-utils-rpc"
     python3-mosquitto: "http://github.com/wirenboard/contrib"
@@ -81,18 +96,26 @@ by-package:
     python3-wb-update-manager: "https://github.com/wirenboard/wb-update-manager"
     sensor-tools-scada-client: "https://github.com/wirenboard/sensor-tools-scada-client"
     serial-tool: "https://github.com/wirenboard/serial_tool"
+    task-wb-base-system: "https://github.com/wirenboard/wb-metapackages"
+    task-wb-common-pkgs: "https://github.com/wirenboard/wb-metapackages"
     u-boot-tools-wb: null  # FIXME
     u-boot-tools: null  # FIXME
     u-boot-tools: null  # FIXME
     wb-adc-tools-mxs: "https://github.com/wirenboard/wb-adc-tools-mxs"
     wb-ble-tesliot: "https://github.com/wirenboard/wb-ble-tesliot"
     wb-cc2652p-flasher: "https://github.com/wirenboard/wb-cc2652p-flasher"
+    wb-cloud-agent: "https://github.com/wirenboard/wb-cloud-agent"
     wb-configs-stretch: "https://github.com/wirenboard/wb-configs"
     wb-configs-wheezy: "https://github.com/wirenboard/wb-configs"
     wb-configs: "https://github.com/wirenboard/wb-configs"
     wb-daemon-watchdogs: "https://github.com/wirenboard/wb-daemon-watchdogs"
+    wb-demo-kit-configs: "https://github.com/wirenboard/wb-demo-kit-configs"
     wb-device-manager: "https://github.com/wirenboard/wb-device-manager"
+    wb-diag-collect: "https://github.com/wirenboard/wb-diag-collect"
     wb-dt-overlays: "https://github.com/wirenboard/wb-dt-overlays"
+    wb-ec-firmware: "https://github.com/wirenboard/wb-embedded-controller"
+    wb-essential: "https://github.com/wirenboard/wb-metapackages"
+    wb-firmware-realtek: "https://github.com/wirenboard/wb-firmware-realtek"
     wb-homa-adc: "https://github.com/wirenboard/wb-homa-adc"
     wb-homa-gpio: "https://github.com/wirenboard/wb-homa-gpio"
     wb-homa-ism-radio: null  # FIXME
@@ -116,8 +139,10 @@ by-package:
     wb-mqtt-gpio: "https://github.com/wirenboard/wb-homa-gpio"
     wb-mqtt-homeui-build-deps: null  # FIXME
     wb-mqtt-homeui: "https://github.com/wirenboard/homeui"
+    wb-mqtt-iec104: "https://github.com/wirenboard/wb-mqtt-iec104"
     wb-mqtt-knx: "https://github.com/wirenboard/wb-mqtt-knx"
     wb-mqtt-lirc: "https://github.com/wirenboard/wb-mqtt-lirc"
+    wb-mqtt-logs: "https://github.com/wirenboard/wb-mqtt-logs"
     wb-mqtt-mbgate: "https://github.com/wirenboard/wb-mqtt-mbgate"
     wb-mqtt-metrics: "https://github.com/wirenboard/wb-mqtt-metrics"
     wb-mqtt-mhz19: "https://github.com/wirenboard/wb-mqtt-mhz19"
@@ -131,11 +156,13 @@ by-package:
     wb-mqtt-spl-meter: "https://github.com/wirenboard/spl-meter"
     wb-mqtt-timestamper: "https://github.com/wirenboard/wb-mqtt-timestamper"
     wb-mqtt-urri: "https://github.com/wirenboard/wb-mqtt-urri"
+    wb-mqtt-w1: "https://github.com/wirenboard/wb-mqtt-w1"
     wb-mqtt-zabbix: "https://github.com/wirenboard/wb-mqtt-zabbix"
     wb-mqtt-zway: "https://github.com/wirenboard/wb-mqtt-zway"
     wb-nm-helper: "https://github.com/wirenboard/wb-nm-helper"
     wb-rules-system: "https://github.com/wirenboard/wb-rules-system"
     wb-rules: "https://github.com/wirenboard/wb-rules"
+    wb-suite: "https://github.com/wirenboard/wb-metapackages"
     wb-test-suite: "https://github.com/wirenboard/test-suite"
     wb-update-manager: "https://github.com/wirenboard/wb-update-manager"
     wb-update-notifier: "https://github.com/wirenboard/wb-update-notifier"
