--- a/releases.yaml
+++ b/releases.yaml
@@ -167,6 +167,23 @@ releases:
             wb-bootlet-wb7x: 5.10.35-wb164-fs1.2.2-deb11-202311241137
             mplc4-wirenboard7: 1.3.3.15223
 
+        wb8/bullseye:
+            <<: *packages-wb-2404
+
+            linux-headers-wb8: 6.8.0-wb1~exp~feature+wb8+6+8~83~g83bbfdf61472
+            linux-image-wb8: 6.8.0-wb1~exp~feature+wb8+6+8~83~g83bbfdf61472
+            linux-libc-dev: 6.8.0-wb1~exp~feature+wb8+6+8~83~g83bbfdf61472
+            wb-bootlet-wb8: 6.8.0-wb1~exp~feature+wb8+6+8~83~g83bbfdf61472
+
+            u-boot-wb8: 2:2024.01+wb1.0.0~exp~tmp+webconn+wb8+prod+u+boot~65154~gde97eb1c80
+            u-boot-tools: 2:2024.01+wb1.0.0~exp~tmp+webconn+wb8+prod+u+boot~65154~gde97eb1c80
+            u-boot-tools-wb: 2:2024.01+wb1.0.0~exp~tmp+webconn+wb8+prod+u+boot~65154~gde97eb1c80
+
+            wb-hwconf-manager: 1.60.0~exp~feature+wb8+slots~6~g75cc1b2
+            wb-configs: 3.23.0~exp~feature+wb8+for+pseudo+stable~7~g44140c7
+            wb-utils: 4.21.0~exp~feature+wb8~7~g46b7e28
+
+
     wb-2401:
         packages-common: &packages-wb-2401
             atecc-util: 0.4.11
@@ -1321,6 +1338,7 @@ suites:
     wb8/bullseye:
         testing: "@unstable.latest"
         unstable: "@unstable.latest"
+        stable: wb-2404
 
     wb7/bullseye:
         stable: wb-2401
@@ -1352,7 +1370,7 @@ suites:
 
 targets:
     wb8/bullseye:
-        arch: arm64
+        arch: [arm64, armhf]
         distro: bullseye
 
     wb7/bullseye:
