--- a/releases.yaml
+++ b/releases.yaml
@@ -202,7 +202,6 @@ releases:
             libwbmqtt1-4: 4.4.2
             libwbmqtt1-4-dev: 4.4.2
             libwbmqtt1-4-test-utils: 4.4.2
-            linux-libc-dev: 5.10.35-wb164
             logsave: 1.46.2-2+wb1
             mmc-utils: 0+git20180327.b4fe0c8c-1+wb1
             mobile-broadband-provider-info: 20230416-1
@@ -243,7 +242,6 @@ releases:
             wb-ble-tesliot: 1.1.1
             wb-cc2652p-flasher: 1.0.0
             wb-cloud-agent: 1.3.3
-            wb-configs: 3.22.1
             wb-daemon-watchdogs: '1.1'
             wb-demo-kit-configs: 1.7.1
             wb-device-manager: 1.7.0
@@ -252,7 +250,6 @@ releases:
             wb-ec-firmware: 1.2.1
             wb-essential: 1.18.4
             wb-firmware-realtek: 1.0.3
-            wb-hwconf-manager: 1.58.8
             wb-knxd-config: 1.1.3
             wb-mb-explorer: 1.2.8
             wb-mcu-fw-flasher: 1.3.2
@@ -287,12 +284,11 @@ releases:
             wb-test-suite-dummy: 1.18.4
             wb-update-manager: 1.3.2
             wb-update-notifier: 0.1.0
-            wb-utils: 4.20.5
 
-            linux-headers-wb8: 6.8.0-wb1~exp~feature+wb8+6+8~83~g83bbfdf61472
-            linux-image-wb8: 6.8.0-wb1~exp~feature+wb8+6+8~83~g83bbfdf61472
-            linux-libc-dev: 6.8.0-wb1~exp~feature+wb8+6+8~83~g83bbfdf61472
-            wb-bootlet-wb8: 6.8.0-wb1~exp~feature+wb8+6+8~83~g83bbfdf61472
+            linux-headers-wb8: 6.8.0-wb1~exp~feature+wb8+6+8~84~ge00c15182c6c
+            linux-image-wb8: 6.8.0-wb1~exp~feature+wb8+6+8~84~ge00c15182c6c
+            linux-libc-dev: 6.8.0-wb1~exp~feature+wb8+6+8~84~ge00c15182c6c
+            wb-bootlet-wb8: 6.8.0-wb1~exp~feature+wb8+6+8~84~ge00c15182c6c-fs1.3.0-deb11-202405021105
 
             u-boot-wb8: 2:2024.01+wb1.0.0~exp~tmp+webconn+wb8+prod+u+boot~65154~gde97eb1c80
             u-boot-tools: 2:2024.01+wb1.0.0~exp~tmp+webconn+wb8+prod+u+boot~65154~gde97eb1c80
