--- a/releases.yaml
+++ b/releases.yaml
@@ -285,16 +285,16 @@ releases:
             wb-update-manager: 1.3.2
             wb-update-notifier: 0.1.0
 
-            linux-headers-wb8: 6.8.0-wb1~exp~feature+wb8+6+8~84~ge00c15182c6c
-            linux-image-wb8: 6.8.0-wb1~exp~feature+wb8+6+8~84~ge00c15182c6c
-            linux-libc-dev: 6.8.0-wb1~exp~feature+wb8+6+8~84~ge00c15182c6c
-            wb-bootlet-wb8x: 6.8.0-wb1~exp~feature+wb8+6+8~84~ge00c15182c6c-fs1.3.0-deb11-202405021105
+            linux-headers-wb8: 6.8.0-wb1~exp~feature+wb8+6+8~88~gb944cc26c743
+            linux-image-wb8: 6.8.0-wb1~exp~feature+wb8+6+8~88~gb944cc26c743
+            linux-libc-dev: 6.8.0-wb1~exp~feature+wb8+6+8~88~gb944cc26c743
+            wb-bootlet-wb8x: 6.8.0-wb1~exp~feature+wb8+6+8~88~gb944cc26c743-fs1.3.0-deb11-202405021105
 
             u-boot-wb8: 2:2024.01+wb1.0.0~exp~tmp+webconn+wb8+prod+u+boot~65154~gde97eb1c80
             u-boot-tools: 2:2024.01+wb1.0.0~exp~tmp+webconn+wb8+prod+u+boot~65154~gde97eb1c80
             u-boot-tools-wb: 2:2024.01+wb1.0.0~exp~tmp+webconn+wb8+prod+u+boot~65154~gde97eb1c80
 
-            wb-hwconf-manager: 1.60.0~exp~feature+wb8+slots~6~g75cc1b2
+            wb-hwconf-manager: 1.60.0~exp~feature+wb8+slots~7~g520a26d
             wb-configs: 3.23.0~exp~feature+wb8+for+pseudo+stable~7~g44140c7
             wb-utils: 4.21.0~exp~feature+wb8~7~g46b7e28
 
