--- a/releases.yaml
+++ b/releases.yaml
@@ -125,7 +125,7 @@ releases:
             wb-mqtt-metrics: 0.3.3
             wb-mqtt-opcua: 1.1.2
             wb-mqtt-rfblinds: 1.0.2
-            wb-mqtt-serial: 2.117.2
+            wb-mqtt-serial: 2.117.2-wb100
             wb-mqtt-smartbus: '1.2'
             wb-mqtt-smartweb: 1.4.4
             wb-mqtt-snmp: 1.2.8
@@ -270,7 +270,7 @@ releases:
             wb-mqtt-metrics: 0.3.3
             wb-mqtt-opcua: 1.1.2
             wb-mqtt-rfblinds: 1.0.2
-            wb-mqtt-serial: 2.117.2
+            wb-mqtt-serial: 2.117.2-wb100
             wb-mqtt-smartweb: 1.4.4
             wb-mqtt-snmp: 1.2.8
             wb-mqtt-urri: 1.2.1
