--- a/releases.yaml
+++ b/releases.yaml
@@ -285,17 +285,17 @@ releases:
             wb-update-manager: 1.3.2
             wb-update-notifier: 0.1.0
 
-            linux-headers-wb8: 6.8.0-wb1~exp~feature+wb8+6+8~88~gb944cc26c743
-            linux-image-wb8: 6.8.0-wb1~exp~feature+wb8+6+8~88~gb944cc26c743
-            linux-libc-dev: 6.8.0-wb1~exp~feature+wb8+6+8~88~gb944cc26c743
-            wb-bootlet-wb8x: 6.8.0-wb1~exp~feature+wb8+6+8~88~gb944cc26c743-fs1.3.0-deb11-202405021105
+            linux-headers-wb8: 6.8.0-wb3~exp~feature+wb8+6+8~99~g6b6c0cd5458e
+            linux-image-wb8: 6.8.0-wb3~exp~feature+wb8+6+8~99~g6b6c0cd5458e
+            linux-libc-dev: 6.8.0-wb3~exp~feature+wb8+6+8~99~g6b6c0cd5458e
+            wb-bootlet-wb8x: 6.8.0-wb3~exp~feature+wb8+6+8~99~g6b6c0cd5458e-fs1.3.1-deb11-202405141557
 
             u-boot-wb8: 2:2024.01+wb1.0.0~exp~tmp+webconn+wb8+prod+u+boot~65154~gde97eb1c80
             u-boot-tools: 2:2024.01+wb1.0.0~exp~tmp+webconn+wb8+prod+u+boot~65154~gde97eb1c80
             u-boot-tools-wb: 2:2024.01+wb1.0.0~exp~tmp+webconn+wb8+prod+u+boot~65154~gde97eb1c80
 
             wb-hwconf-manager: 1.60.0~exp~feature+wb8+slots~7~g520a26d
-            wb-configs: 3.23.0~exp~feature+wb8+for+pseudo+stable~7~g44140c7
+            wb-configs: 3.23.1~exp~feature+wb8+for+pseudo+stable~11~g49b1517
             wb-utils: 4.21.1~exp~feature+wb8~8~g9b3f395
 
 
