--- a/releases.yaml
+++ b/releases.yaml
@@ -285,10 +285,10 @@ releases:
             wb-update-manager: 1.3.2
             wb-update-notifier: 0.1.0
 
-            linux-headers-wb8: 6.8.0-wb4~exp~feature+wb8+6+8~101~ga3a6cc58d5cd
-            linux-image-wb8: 6.8.0-wb4~exp~feature+wb8+6+8~101~ga3a6cc58d5cd
-            linux-libc-dev: 6.8.0-wb4~exp~feature+wb8+6+8~101~ga3a6cc58d5cd
-            wb-bootlet-wb8x: 6.8.0-wb4~exp~feature+wb8+6+8~101~ga3a6cc58d5cd-fs1.3.1-deb11-202405141557
+            linux-headers-wb8: 6.8.0-wb5~exp~feature+wb8+6+8~103~g9300bad0e86c
+            linux-image-wb8: 6.8.0-wb5~exp~feature+wb8+6+8~103~g9300bad0e86c
+            linux-libc-dev: 6.8.0-wb5~exp~feature+wb8+6+8~103~g9300bad0e86c
+            wb-bootlet-wb8x: 6.8.0-wb5~exp~feature+wb8+6+8~103~g9300bad0e86c-fs1.3.1-deb11-202405141557
 
             u-boot-wb8: 2:2024.01+wb1.0.0~exp~tmp+webconn+wb8+prod+u+boot~65154~gde97eb1c80
             u-boot-tools: 2:2024.01+wb1.0.0~exp~tmp+webconn+wb8+prod+u+boot~65154~gde97eb1c80
