--- a/releases.yaml
+++ b/releases.yaml
@@ -294,7 +294,7 @@ releases:
             u-boot-tools: 2:2024.01+wb1.0.0~exp~tmp+webconn+wb8+prod+u+boot~65154~gde97eb1c80
             u-boot-tools-wb: 2:2024.01+wb1.0.0~exp~tmp+webconn+wb8+prod+u+boot~65154~gde97eb1c80
 
-            wb-hwconf-manager: 1.60.0~exp~feature+wb8+slots~7~g520a26d
+            wb-hwconf-manager: 1.60.0~exp~feature+wb8+slots~9~g0bd18fb
             wb-configs: 3.23.1~exp~feature+wb8+for+pseudo+stable~11~g49b1517
             wb-utils: 4.21.1~exp~feature+wb8~8~g9b3f395
 
