--- a/releases.yaml
+++ b/releases.yaml
@@ -1538,7 +1538,9 @@ staging:
         - "hubpower"
         - "intrascada"
         - "intrahouse"
-        - "knxd*"
+        - "knxd"
+        - "knxd-dev"
+        - "knxd-tools"
         - "libateccssl1.1"
         - "libfdt1"
         - "libwbmqtt*"
