Add `msw5Gpb` firmware signature

--- a/releases.yaml
+++ b/releases.yaml
@@ -1297,6 +1297,7 @@ releases:
             msw5G: 4.31.7
             msw5GL: 4.31.7
             msw5Gth: 4.31.7
+            msw5Gpb: 4.31.8
             # WB-MD
             mdm3: 2.6.6         # на данном таргете на версиях старше 2.6.6 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mdm3_042: 2.6.6     # на данном таргете на версиях старше 2.6.6 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
@@ -1400,6 +1401,7 @@ releases:
             msw5G: 4.31.7
             msw5GL: 4.31.7
             msw5Gth: 4.31.7
+            msw5Gpb: 4.31.8
             # WB-MD
             mdm3: 2.6.6         # на данном таргете на версиях старше 2.6.6 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mdm3_042: 2.6.6     # на данном таргете на версиях старше 2.6.6 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
