--- a/releases.yaml
+++ b/releases.yaml
@@ -87,7 +87,7 @@ releases:
             u-boot-tools-wb: 2:2021.10+wb1.7.1
             wb-ble-tesliot: 1.1.1
             wb-cc2652p-flasher: 1.0.0
-            wb-cloud-agent: 1.3.3
+            wb-cloud-agent: 1.3.3-wb102
             wb-configs: 3.22.1
             wb-daemon-watchdogs: '1.1'
             wb-demo-kit-configs: 1.7.2
@@ -240,7 +240,7 @@ releases:
             telegraf-wb-cloud-agent: 1.29.1
             wb-ble-tesliot: 1.1.1
             wb-cc2652p-flasher: 1.0.0
-            wb-cloud-agent: 1.3.3
+            wb-cloud-agent: 1.3.3-wb102
             wb-daemon-watchdogs: '1.1'
             wb-demo-kit-configs: 1.7.2
             wb-device-manager: 1.7.0
