--- a/releases.yaml
+++ b/releases.yaml
@@ -285,10 +285,10 @@ releases:
             wb-update-notifier: 0.1.0
             wb-zigbee2mqtt: 1.3.5
 
-            linux-headers-wb8: 6.8.0-wb10~exp~feature+wb8+6+8~118~geff941b5c61e
-            linux-image-wb8: 6.8.0-wb10~exp~feature+wb8+6+8~118~geff941b5c61e
-            linux-libc-dev: 6.8.0-wb10~exp~feature+wb8+6+8~118~geff941b5c61e
-            wb-bootlet-wb8x: 6.8.0-wb10~exp~feature+wb8+6+8~118~geff941b5c61e-fs1.3.1-deb11-202405141557
+            linux-headers-wb8: 6.8.0-wb12~exp~feature+wb8+6+8~127~g52a272203a80
+            linux-image-wb8: 6.8.0-wb12~exp~feature+wb8+6+8~127~g52a272203a80
+            linux-libc-dev: 6.8.0-wb12~exp~feature+wb8+6+8~127~g52a272203a80
+            wb-bootlet-wb8x: 6.8.0-wb12~exp~feature+wb8+6+8~127~g52a272203a80-fs1.3.1-deb11-202405141557
 
             u-boot-wb8: 2:2024.01+wb1.0.0
             u-boot-tools: 2:2024.01+wb1.0.0
