--- a/releases.yaml
+++ b/releases.yaml
@@ -284,6 +284,8 @@ releases:
             wb-update-manager: 1.3.2
             wb-update-notifier: 0.1.0
             wb-zigbee2mqtt: 1.3.5
+            zigbee2mqtt: 1.39.0-wb101
+            zigbee2mqtt-1.18.1: 1.18.1-wb101
 
             linux-headers-wb8: 6.8.0-wb12~exp~feature+wb8+6+8~127~g52a272203a80
             linux-image-wb8: 6.8.0-wb12~exp~feature+wb8+6+8~127~g52a272203a80
@@ -295,7 +297,7 @@ releases:
             u-boot-tools-wb: 2:2024.01+wb1.0.0
 
             wb-hwconf-manager: 1.60.0
-            wb-configs: 3.23.1-wb103
+            wb-configs: 3.23.1-wb104
             wb-utils: 4.21.2-wb100
 
     wb-2401:
