add fallback_arch for wb8/bullseye

--- a/releases.yaml
+++ b/releases.yaml
@@ -1491,6 +1491,7 @@ suites:
 targets:
     wb8/bullseye:
         arch: [arm64]
+        fallback_arch: [armhf]
         distro: bullseye
 
     wb7/bullseye:
