--- a/releases.yaml
+++ b/releases.yaml
@@ -297,7 +297,7 @@ releases:
             u-boot-tools-wb: 2:2024.01+wb1.0.0
 
             wb-hwconf-manager: 1.60.0
-            wb-configs: 3.23.1-wb104
+            wb-configs: 3.23.1-wb104+1
             wb-utils: 4.21.2-wb100
 
     wb-2401:
