--- a/releases.yaml
+++ b/releases.yaml
@@ -1560,6 +1560,7 @@ staging:
         - "mplc4-*"
         - "mqtt-logger"
         - "mqtt-tools"
+        - "mqttui"
         - "nodejs"
         - "python*"
         - "rapidscada"
