--- a/releases.yaml
+++ b/releases.yaml
@@ -128,7 +128,7 @@ releases:
             wb-mqtt-metrics: 0.3.3
             wb-mqtt-opcua: 1.1.4
             wb-mqtt-rfblinds: 1.0.3
-            wb-mqtt-serial: 2.138.1
+            wb-mqtt-serial: 2.138.1-wb100
             wb-mqtt-smartbus: '1.2'
             wb-mqtt-smartweb: 1.4.6
             wb-mqtt-snmp: 1.3.3
