ms 4.31.12 and msv2Gth

--- a/releases.yaml
+++ b/releases.yaml
@@ -1268,6 +1268,7 @@ releases:
             msw5GL: 4.31.11
             msw5Gth: 4.31.11
             msw5Gpb: 4.31.11
+            msv2Gth: 4.31.12
             # WB-MD
             mdm3: 2.6.6         # на данном таргете на версиях старше 2.6.6 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mdm3_042: 2.6.6     # на данном таргете на версиях старше 2.6.6 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
@@ -1358,27 +1359,27 @@ releases:
             mir64_gd: 4.32.0
             mir_gdf8: 4.32.0
             # WB-MS
-            ms-33: 4.31.9
-            msv2-4.0: 4.31.9
-            msv2-4.0_gd: 4.31.9
-            msv2G42: 4.31.9
-            msv2G42nlg: 4.31.9
-            msw3-48mh: 4.31.9
+            ms-33: 4.31.12
+            msv2-4.0: 4.31.12
+            msv2-4.0_gd: 4.31.12
+            msv2G42: 4.31.12
+            msv2G42nlg: 4.31.12
+            msw3-48mh: 4.31.12
             msw3-48mh30: 4.29.11    # на данном таргете на версиях старше 4.29.11 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
-            msw3-49: 4.31.9
-            msw3-49th30: 4.31.9
-            msw3-49-467: 4.31.9
-            msw3-49_gd: 4.31.11
-            msw3-49gd_oa: 4.31.11
-            msw3G49th: 4.31.11
-            msw3G419: 4.31.11
-            msw3G419th: 4.31.11
-            msw3Gc: 4.31.11
-            msw3G419L: 4.31.11
-            msw5G: 4.31.11
-            msw5GL: 4.31.11
-            msw5Gth: 4.31.11
-            msw5Gpb: 4.31.11
+            msw3-49: 4.31.12
+            msw3-49th30: 4.31.12
+            msw3-49-467: 4.31.12
+            msw3-49_gd: 4.31.12
+            msw3-49gd_oa: 4.31.12
+            msw3G49th: 4.31.12
+            msw3G419: 4.31.12
+            msw3G419th: 4.31.12
+            msw3Gc: 4.31.12
+            msw3G419L: 4.31.12
+            msw5G: 4.31.12
+            msw5GL: 4.31.12
+            msw5Gth: 4.31.12
+            msw5Gpb: 4.31.12
             # WB-MD
             mdm3: 2.6.6         # на данном таргете на версиях старше 2.6.6 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mdm3_042: 2.6.6     # на данном таргете на версиях старше 2.6.6 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
