wb-2501: kernel v5.10.35-wb173 -> 5.10.35-wb173-wb100 (#862)
* wb-2501 wb6,7 kernel: v5.10.35-wb173 -> v5.10.35-wb175; wb8 kernel: v6.8.0-wb124 -> v6.8.0-wb124+wb100

--- a/releases.yaml
+++ b/releases.yaml
@@ -159,9 +159,9 @@ releases:
         wb6/bullseye:
             <<: *packages-wb-2501
 
-            linux-libc-dev: 5.10.35-wb173
-            linux-image-wb6: 5.10.35-wb173
-            linux-headers-wb6: 5.10.35-wb173
+            linux-libc-dev: 5.10.35-wb175
+            linux-image-wb6: 5.10.35-wb175
+            linux-headers-wb6: 5.10.35-wb175
             u-boot-wb6: 2:2021.10+wb1.7.3
             u-boot-tools-wb: 2:2021.10+wb1.7.3
             wb-bootlet-wb6x: 5.10.35-wb173-fs1.3.7-deb11-202412021728
@@ -171,9 +171,9 @@ releases:
         wb7/bullseye:
             <<: *packages-wb-2501
 
-            linux-libc-dev: 5.10.35-wb173
-            linux-image-wb7: 5.10.35-wb173
-            linux-headers-wb7: 5.10.35-wb173
+            linux-libc-dev: 5.10.35-wb175
+            linux-image-wb7: 5.10.35-wb175
+            linux-headers-wb7: 5.10.35-wb175
             u-boot-wb7: 2:2021.10+wb1.7.3
             u-boot-tools-wb: 2:2021.10+wb1.7.3
             wb-bootlet-wb7x: 5.10.35-wb173-fs1.3.7-deb11-202412021728
@@ -184,9 +184,9 @@ releases:
         wb8/bullseye:
             <<: *packages-wb-2501
 
-            linux-libc-dev: 6.8.0-wb124
-            linux-image-wb8: 6.8.0-wb124
-            linux-headers-wb8: 6.8.0-wb124
+            linux-libc-dev: 6.8.0-wb124+wb100
+            linux-image-wb8: 6.8.0-wb124+wb100
+            linux-headers-wb8: 6.8.0-wb124+wb100
             u-boot-wb8: 2:2024.01+wb1.0.3
             u-boot-tools-wb: 2:2024.01+wb1.0.3
             wb-bootlet-wb8x: 6.8.0-wb124-fs1.3.7-deb11-202412021728
