--- a/releases.yaml
+++ b/releases.yaml
@@ -1282,7 +1282,7 @@ releases:
             mdm3_042: 2.6.6     # на данном таргете на версиях старше 2.6.6 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mdm3_26: 2.6.6      # на данном таргете на версиях старше 2.6.6 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mdm3G26: 2.9.1
-            # WB-MAP
+            # WB-MAPs
             map12e: 2.8.1           # нет в наличии устройства для проверок новых прошивок
             map12eG: 2.10.2
             map12eGe: 2.10.3
@@ -1421,7 +1421,7 @@ releases:
             mdm3_042: 2.6.6     # на данном таргете на версиях старше 2.6.6 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mdm3_26: 2.6.6      # на данном таргете на версиях старше 2.6.6 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mdm3G26: 2.9.1
-            # WB-MAP
+            # WB-MAPs
             map12e: 2.8.1           # нет в наличии устройства для проверок новых прошивок
             map12eG: 2.10.3
             map12eGe: 2.10.3
