--- a/releases.yaml
+++ b/releases.yaml
@@ -1282,7 +1282,7 @@ releases:
             mdm3_042: 2.6.6     # на данном таргете на версиях старше 2.6.6 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mdm3_26: 2.6.6      # на данном таргете на версиях старше 2.6.6 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mdm3G26: 2.9.1
-            # WB-MAPs
+            # WB-MAP
             map12e: 2.8.1           # нет в наличии устройства для проверок новых прошивок
             map12eG: 2.10.2
             map12eGe: 2.10.4
@@ -1422,6 +1422,10 @@ releases:
             mdm3_26: 2.6.6      # на данном таргете на версиях старше 2.6.6 прошивка перестала помещаться в 25K (32K FLASH - 4K bootloader - 3 flashfs)
             mdm3G26: 2.9.2
             # WB-MAP
+            map12e: 2.8.1           # нет в наличии устройства для проверок новых прошивок
+            map12eG: 2.10.4
+            map12eGe: 2.10.4
+            map12h: 2.7.4           # таргет не проходит стенд калибровки на прошивке 2.7.5
             map3e: 2.7.5            # нет в наличии устройства для проверок новых прошивок
             map3e16: 2.8.1          # нет в наличии устройства для проверок новых прошивок
             map3e_031f6: 2.10.4
